--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Xiaotong Sun"
+title                    : "MODES-TR"
 title_separator          : "-"
 name                     : &name "Xiaotong Sun"
 description              : &description "personal description"
